--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "league/flysystem": "^1.0"
+    "league/flysystem": "^1.0",
+    "as247/cloud-storage": "^1.0"
   },
   "autoload": {
     "psr-4": {
