--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=7.1",
     "ext-json": "*",
     "league/flysystem": "^1.0",
-    "as247/cloud-storage": "^1.0"
+    "as247/cloud-storages": "^1.0"
   },
   "autoload": {
     "psr-4": {
